:bug: fix button alignment on editform; padding bottom of entries list

--- a/ui-react/src/App.css
+++ b/ui-react/src/App.css
@@ -43,9 +43,11 @@
 .entriesList {
   text-align:left;
   padding-left: 0.5rem;
+  padding-bottom: 4em;
 }
 .entriesList li {
   list-style-type: none;
+  
 }
 
 .plainLink {
@@ -62,6 +64,7 @@
 
 .markdownDisplay{
   text-align:left;
+  padding-bottom: 4em;
 }
 
 .grid-3mw {
@@ -71,8 +74,17 @@
   padding: 0 .5rem;
 }
 
+.editBtns {
+  display: flex;
+  justify-content: space-between;
+}
+
+button:nth-of-type(3) {
+  margin-left: auto;
+}
+
 .container {
-  margin: 0 .5rem;
+  margin: 0 .1em;
 }
 
 @media only screen and (max-width: 375px) {
